--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main id="calculator-container">
         <section id="calc__panel">
             <input type="text" id="display" placeholder="0" value="0" readonly>
         </section>
-        
+
         <section id="buttons-container">
             <button class="button--basic-op">AC</button>
             <button class="button--basic-op">+/-</button>
