--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
-    <main id="calculator-container">
+    <main id="calc-container">
         <section id="calc__panel">
             <input type="text" id="display" placeholder="0" value="0" readonly>
         </section>
