--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Simple Calculator</title>
 
     <link rel="stylesheet" href="./src/style.css">
+    
+    <!-- Inter Font Added -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <main id="calc-container">
