--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Simple Calculator</title>
 
     <link rel="stylesheet" href="./src/style.css">
-    
+
     <!-- Inter Font Added -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,29 +19,29 @@
         </section>
 
         <section id="buttons-container">
-            <button class="button--basic-op">AC</button>
-            <button class="button--basic-op">+/-</button>
-            <button class="button--basic-op">%</button>
-            <button class="button--basic-op">÷</button>
+            <button class="button--basic-op button--gray">AC</button>
+            <button class="button--basic-op button--gray">+/-</button>
+            <button class="button--basic-op button--gray">%</button>
+            <button class="button--basic-op button--blue">÷</button>
 
             <button class="button--number">7</button>
             <button class="button--number">8</button>
             <button class="button--number">9</button>
-            <button class="button--basic-op">x</button>
+            <button class="button--basic-op button--blue">x</button>
 
             <button class="button--number">4</button>
             <button class="button--number">5</button>
             <button class="button--number">6</button>
-            <button class="button--basic-op">-</button>
+            <button class="button--basic-op button--blue">-</button>
 
             <button class="button--number">1</button>
             <button class="button--number">2</button>
             <button class="button--number">3</button>
-            <button class="button--basic-op">+</button>
+            <button class="button--basic-op button--blue">+</button>
 
-            <button class="button--number">0</button>
+            <button class="button--number zero">0</button>
             <button class="button--number">.</button>
-            <button class="button--basic-op">=</button>
+            <button class="button--basic-op button--dark-blue">=</button>
         </section>
     </main>
 </body>
