--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
         </section>
 
         <section id="buttons-container">
-            <button class="button--basic-op button--gray" onclick="clear()">AC</button>
-            <button class="button--basic-op button--gray">+/-</button>
-            <button class="button--basic-op button--gray">%</button>
-            <button class="button--basic-op button--blue">÷</button>
+            <button class="button--basic-op button--gray" onclick="resetCalc()">AC</button>
+            <button class="button--basic-op button--gray" onclick="toggleSign()">+/-</button>
+            <button class="button--basic-op button--gray" onclick="inputOperator(`%`)">%</button>
+            <button class="button--basic-op button--blue" onclick="inputOperator(`/`)">÷</button>
 
-            <button class="button--number">7</button>
-            <button class="button--number">8</button>
-            <button class="button--number">9</button>
-            <button class="button--basic-op button--blue">x</button>
+            <button class="button--number" onclick="inputNumber(`7`)">7</button>
+            <button class="button--number" onclick="inputNumber(`8`)">8</button>
+            <button class="button--number" onclick="inputNumber(`9`)">9</button>
+            <button class="button--basic-op button--blue" onclick="inputOperator(`*`)">x</button>
 
-            <button class="button--number">4</button>
-            <button class="button--number">5</button>
-            <button class="button--number">6</button>
-            <button class="button--basic-op button--blue">-</button>
+            <button class="button--number" onclick="inputNumber(`4`)">4</button>
+            <button class="button--number" onclick="inputNumber(`5`)">5</button>
+            <button class="button--number" onclick="inputNumber(`6`)">6</button>
+            <button class="button--basic-op button--blue" onclick="inputOperator(`-`)">-</button>
 
-            <button class="button--number" onclick="displayOne()" >1</button>
-            <button class="button--number">2</button>
-            <button class="button--number">3</button>
-            <button class="button--basic-op button--blue">+</button>
+            <button class="button--number" onclick="inputNumber(`1`)" >1</button>
+            <button class="button--number" onclick="inputNumber(`2`)">2</button>
+            <button class="button--number" onclick="inputNumber(`3`)">3</button>
+            <button class="button--basic-op button--blue" onclick="inputOperator(`+`)">+</button>
 
-            <button class="button--number zero">0</button>
-            <button class="button--number">.</button>
-            <button class="button--basic-op button--dark-blue">=</button>
+            <button class="button--number zero" onclick="inputNumber(`0`)">0</button>
+            <button class="button--number" onclick="inputDecimal()">.</button>
+            <button class="button--basic-op button--dark-blue" onclick="calculate()">=</button>
         </section>
     </main>
 
